--- a/AIR/assets/01_ImageTracking_1_ImageOnTarget/index.html
+++ b/AIR/assets/01_ImageTracking_1_ImageOnTarget/index.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+	<div class="close">
+	  <a id="close" href="#"><img src="assets/btn_close.png" alt="Close"></a>
+	</div>
+	
 	<div id="loadingMessage" class="info">Loading ...</div>
 
 	<script src="js/imageontarget.js"></script>
